@@ -4,6 +4,8 @@
  */
 package org.geoserver.cloud.autoconfigure.gwc.backend;
 
+import static com.github.stefanbirkner.systemlambda.SystemLambda.withEnvironmentVariable;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -14,6 +16,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import com.google.common.base.Throwables;
 
 import org.geoserver.cloud.autoconfigure.gwc.GeoWebCacheContextRunner;
+import org.geoserver.cloud.gwc.config.core.GeoWebCacheConfigurationProperties;
 import org.geoserver.cloud.gwc.repository.CloudDefaultStorageFinder;
 import org.geoserver.cloud.gwc.repository.CloudGwcXmlConfiguration;
 import org.geoserver.cloud.gwc.repository.CloudXMLResourceProvider;
@@ -37,6 +40,7 @@ class GwcCoreAutoConfigurationTest {
 
     @BeforeEach
     void setUp() {
+        System.clearProperty("GEOWEBCACHE_CACHE_DIR");
         runner = GeoWebCacheContextRunner.newMinimalGeoWebCacheContextRunner(tmpDir);
     }
 
@@ -91,5 +95,55 @@ class GwcCoreAutoConfigurationTest {
                     if (null != expectedMessage)
                         assertThat(root.getMessage(), containsString(expectedMessage));
                 });
+    }
+
+    /**
+     * Note this test will fail without {@code --add-opens=java.base/java.util=ALL-UNNAMED} JVM
+     * parameter (watch out if running it from the IDE, maven is configured to set it)
+     */
+    @Test
+    void defaultCacheDirectoryFromEnvVariable() throws Exception {
+        File dir = new File(tmpDir, "env_cachedir");
+        assertThat(dir).doesNotExist();
+        String dirpath = dir.getAbsolutePath();
+        withEnvironmentVariable("GEOWEBCACHE_CACHE_DIR", dirpath)
+                .execute(
+                        () -> {
+                            assertThat(System.getenv("GEOWEBCACHE_CACHE_DIR")).isEqualTo(dirpath);
+                            runner.withPropertyValues(
+                                            "gwc.cache-directory: ${GEOWEBCACHE_CACHE_DIR}")
+                                    .run(
+                                            context -> {
+                                                assertThat(context).hasNotFailed();
+                                                assertThat(dir).isDirectory();
+
+                                                var gwcConfigProps =
+                                                        context.getBean(
+                                                                GeoWebCacheConfigurationProperties
+                                                                        .class);
+                                                assertThat(gwcConfigProps.getCacheDirectory())
+                                                        .isEqualTo(dir.toPath());
+                                            });
+                        });
+        assertThat(System.getenv("GEOWEBCACHE_CACHE_DIR")).isNull();
+    }
+
+    @Test
+    void defaultCacheDirectoryFromSystemProperty() throws Exception {
+        File dir = new File(tmpDir, "sysprop_cachedir");
+        assertThat(dir).doesNotExist();
+        String dirpath = dir.getAbsolutePath();
+
+        System.setProperty("GEOWEBCACHE_CACHE_DIR", dirpath);
+        try {
+            runner.withPropertyValues("gwc.cache-directory: ${GEOWEBCACHE_CACHE_DIR}")
+                    .run(
+                            context -> {
+                                assertThat(context).hasNotFailed();
+                                assertThat(dir).isDirectory();
+                            });
+        } finally {
+            System.clearProperty("GEOWEBCACHE_CACHE_DIR");
+        }
     }
 }
